--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "font-awesome": "fontawesome#^4.7.0"
+    "font-awesome": "fontawesome#^4.7.0",
+    "animate.css": "^3.5.2"
   }
 }
